# hesoyam

./: .gitignore  Cargo.toml  README.md
examples/crud/: Cargo.toml
examples/crud/src/: example_model.rs  example_model_impl.rs  example_raw_query.rs  main.rs  model.rs
hesoyam/: Cargo.toml  README.md
hesoyam/src/: lib.rs
hesoyam_core/: Cargo.toml
hesoyam_core/src/: error.rs  lib.rs
hesoyam_core/src/client/: client.rs  config.rs  manager.rs  mod.rs
hesoyam_core/src/client/clickhouse/: clickhouse.rs  config.rs  mod.rs  row.rs
hesoyam_core/src/client/postgres_/: config.rs  mod.rs  postgres_.rs
hesoyam_core/src/model/: field.rs  field_type.rs  mod.rs  model.rs
hesoyam_core/src/query_builder/: builder.rs  compiled_query.rs  condition.rs  delete.rs  insert.rs  mod.rs  update.rs
hesoyam_core/src/query_builder/clause/: delete.rs  insert.rs  limit.rs  mod.rs  select.rs  update.rs  where_.rs
hesoyam_core/src/query_builder/dialect/: clickhouse.rs  dialect.rs  mod.rs  postgres.rs  postgres_.rs
hesoyam_macro/: Cargo.toml
hesoyam_macro/src/: context.rs  lib.rs
hesoyam_macro/src/tests/: mod.rs  model.rs  test_model.rs
