[package]
name = "hesoyam"
version = "1.0.0"
authors = ["Andrew <debiannuser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.34", features = ["full"] }

[dependencies.hesoyam_core]
version = "~1.0.0"
path = "../hesoyam_core"

[dependencies.hesoyam_macro]
version = "~1.0.0"
path = "../hesoyam_macro"
