[package]
name = "hesoyam"
version = "0.1.0"
authors = ["Andrew <debiannuser@gmail.com>"]
edition = "2018"
description = "hesoyam orm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.34", features = ["full"] }

[dependencies.hesoyam_core]
version = "~0.1.0"
path = "../hesoyam_core"

[dependencies.hesoyam_macro]
version = "~0.1.0"
path = "../hesoyam_macro"
