[package]
name = "hesoyam_core"
version = "0.1.1"
authors = ["Andrew <debiannuser@gmail.com>"]
edition = "2018"
description = "hesoyam core package"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.34", features = ["full"] }
postgres = { version = "0.17.5", features = ["with-chrono-0_4"] }
tokio = "0.2.22"
tokio-postgres = "0.5.5"
futures = "0.3.5"
reqwest = { version = "0.10", features = ["blocking"] }
csv = "1.1.3"
error-chain = "0.12.3"
chrono = "0.4.13"
