[package]
name = "hesoyam_macro"
version = "1.0.0"
authors = ["Andrew <debiannuser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.34", features = ["full"] }
quote = "1.0.7"
darling = "0.10.2"

[dependencies.hesoyam_core]
version = "~1.0.0"
path = "../hesoyam_core"
