[package]
name = "hesoyam_macro"
version = "0.1.5"
authors = ["Andrew <debiannuser@gmail.com>"]
edition = "2018"
description = "hesoyam macro package"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.34", features = ["full"] }
quote = "1.0.7"
darling = "0.10.2"

[dependencies.hesoyam_core]
version = "~0.1.5"
path = "../hesoyam_core"
