[package]
name = "crud"
version = "0.1.0"
authors = ["Andrew <debiannuser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hesoyam = { path = "../../hesoyam" }

reqwest = { version = "0.10", features = ["blocking"] }
csv = "1.1.3"
